关键字替换

--- a/src/components/BusinessApplication/BusinessApplication.html
+++ b/src/components/BusinessApplication/BusinessApplication.html
@@ -9,7 +9,7 @@
 <!--      <div class="huit"></div>-->
 <!--      <div class="bussiness_apply_title_small">-->
 <!--        <span class="bussiness_apply_title_small_aa">请发送申请到：</span>-->
-<!--        <span class="bussiness_apply_title_small_bb">bd@815ex.com</span>-->
+<!--        <span class="bussiness_apply_title_small_bb">www.2020.exchange</span>-->
 <!--        <span class="bussiness_apply_title_small_aa">或</span>-->
 <!--        <span class="bussiness_apply_title_small_bb" @click="GO_APPEAL" style="cursor: pointer;">联系客服</span>-->
 <!--      </div>-->
@@ -17,7 +17,7 @@
         申请需要具备以下条件：
       </div>
       <div class="bussiness_small3">
-        <div class="bussiness_apply_title_small3_aa">1. 注册中秋，并完成实名认证；</div>
+        <div class="bussiness_apply_title_small3_aa">1. 注册二零二零，并完成实名认证；</div>
         <div class="bussiness_apply_title_small3_bb" v-if="!auth_info.idType" @click="GO_AUTHEUSER">
           <span class="bdiphone">去认证</span>
         </div>
@@ -73,7 +73,7 @@
 <!--			<div class="bussiness_apply_rules">-->
 <!--				<ul class="text_grey">-->
 <!--					<li class="bussiness_apply_rules_item">-->
-<!--						1、注册币为，并完成实名认证;-->
+<!--						1、注册二零二零，并完成实名认证;-->
 <!--						<span class="tips" v-if="!auth_info.idType">-->
 <!--							<a v-if="isMobile" class="text_blue" href="#" @click="GO_AUTHEUSER">-->
 <!--								去app认证-->
