--- a/src/components/HelloWorld/HelloWorld.html
+++ b/src/components/HelloWorld/HelloWorld.html
@@ -3,10 +3,10 @@
   <h2>Essential Links</h2>
   <ul>
     <li>
-      <span @click="click_aNetwork">www.815ex.com 发送请求</span>
+      <span @click="click_aNetwork">www.2020.exchange 发送请求</span>
     </li>
     <li>
-      <span @click="click_bNetwork">www.815ex.com 发送请求</span>
+      <span @click="click_bNetwork">www.2020.exchange 发送请求</span>
     </li>
   </ul>
 </div>
