--- a/src/components/MerchantsProtocol/MerchantsProtocol.html
+++ b/src/components/MerchantsProtocol/MerchantsProtocol.html
@@ -4,7 +4,7 @@
       <div class="apply-box-title">商家认证协议</div>
       <div class="apply-box-list">
         <!-- <div class="apply-box-list-descript">
-          本服务协议由您（以下简称“您”）与中秋数字资产交易平台共同订立（以下简称“中秋”）。
+          本服务协议由您（以下简称“您”）与二零二零数字资产交易平台共同订立（以下简称“二零二零”）。
         </div> -->
         <div class="apply-box-list-descript">
           我们在此特别提醒您：
@@ -12,7 +12,7 @@
         <div class="apply-box-list-descript apply-box-list-descript-detail">
           &nbsp;&nbsp; 请确认，币商在开始“申请广告发布资格”前，您已详细阅读了本协议以及本网站上相关法律文件以及规则的所有内容，
           一旦您开始申请流程，即表示您充分理解并同意接受本协议以及本网站上相关法律文件以及交易规则的全部内容。为了
-          提高交易的安全性和本平台注册用户身份的可信度，中秋交易所（以下简称本网站）向您提供认证服务。您申请认
+          提高交易的安全性和本平台注册用户身份的可信度，二零二零交易所（以下简称本网站）向您提供认证服务。您申请认
           证时，本网站有权采取各种其认为必要的措施对用户身份进行识别，但是，作为普通的网络服务提供商，本网站对用户
           身份识别结果的准确性和绝对真实性不做任何保证。
         </div>
@@ -21,7 +21,7 @@
 
           </div>
           <div class="apply-box-list-descript apply-box-list-descript-detail">
-                3、如果中秋根据其单方判断认为您违反了本
+                3、如果二零二零根据其单方判断认为您违反了本
           </div> -->
         <div class="apply-box-list-title">
           <span class="apply-box-list-title-green-title">（一）资产保证金</span>
