--- a/src/components/Footer/Footer.html
+++ b/src/components/Footer/Footer.html
@@ -4,7 +4,7 @@
   <div class="footer_aboutus">
     <div class="footer11">
       <div class="footerlogo"><img src="../../assets/c2c_footer/footer-logo-欧联.png" ></div>
-      <div class="footerlogo footerlo"><span>联系我们：info@815ex.com</span></div>
+      <div class="footerlogo footerlo"><span>联系我们：info@2020.exchange</span></div>
 <!--      <div class="footerlogo2">-->
 <!--        <img src="../../assets/c2c_footer/footimg1.png" >-->
 <!--        <img src="../../assets/c2c_footer/footimg2.png" >-->
@@ -22,7 +22,7 @@
           <ul>
             <li class="lititle"><span class="guanywm">关于我们</span></a></li>
             <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360035121071-%E5%85%B3%E4%BA%8E%E4%B8%AD%E7%A7%8B%E4%BA%A4%E6%98%93%E6%89%80
-">关于815ex</a></li>
+">关于二零二零</a></li>
             <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/sections/360007044431-公告中心">公告</a></li>
           </ul>
         </div>
