OTC 底部修改和 2020 一致

--- a/src/components/Footer/Footer.html
+++ b/src/components/Footer/Footer.html
@@ -3,8 +3,13 @@
 <div class="footer-detail-container min-width">
   <div class="footer_aboutus">
     <div class="footer11">
-      <div class="footerlogo"><img src="../../assets/c2c_footer/footer-logo-欧联.png" ></div>
-      <div class="footerlogo footerlo"><span>联系我们：info@2020.exchange</span></div>
+      <div class="footerlogo"><img src="../../assets/c2c_footer/2020_web_footer_logo@2x.png" ></div>
+      <div class="footerlogo footerlo">
+<!--        <span>联系我们：info@2020.exchange</span>-->
+        <div>建议反馈 : info@2020.exchange</div>
+        <div>客户服务 : service@2020.exchange</div>
+        <div>商务合作 : business@2020.exchange</div>
+      </div>
 <!--      <div class="footerlogo2">-->
 <!--        <img src="../../assets/c2c_footer/footimg1.png" >-->
 <!--        <img src="../../assets/c2c_footer/footimg2.png" >-->
@@ -16,36 +21,118 @@
 <!--        <img src="../../assets/c2c_footer/footimg8.png" >-->
 <!--      </div>-->
     </div>
-    <div class="footer12">
+
+<!--    sss ————————————————    -->
+<!--    <div class="footer12">-->
+<!--      <div class="footer1211">-->
+<!--        <div class="footer11font">-->
+<!--          <ul>-->
+<!--            <li class="lititle"><span class="guanywm">关于我们</span></a></li>-->
+<!--            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360035121071-%E5%85%B3%E4%BA%8E%E4%B8%AD%E7%A7%8B%E4%BA%A4%E6%98%93%E6%89%80-->
+<!--">关于二零二零</a></li>-->
+<!--            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/sections/360007044431-公告中心">公告</a></li>-->
+<!--          </ul>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="footer1211">-->
+<!--        <div class="footer11font">-->
+<!--          <ul>-->
+<!--            <li  class="lititle"><span class="guanywm">条款说明</span></li>-->
+<!--            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360034747112-TERMS-AND-CONDITIONS">服务协议</a></li>-->
+<!--            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360035121691-PRIVACY-POLICY">隐私协议</a></li>-->
+<!--            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360034747272-%E8%B4%B9%E7%8E%87%E6%A0%87%E5%87%86-->
+<!--">费率标准</a></li>-->
+<!--          </ul>-->
+<!--        </div>-->
+<!--        </div>-->
+<!--      <div class="footer1211">-->
+<!--      <div class="footer11font wechat">-->
+<!--        <img src="./assets/客服二维码_web 2.png" alt="">-->
+<!--        <p>客服微信</p>-->
+<!--      </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    ——————————————     -->
+
+
+
+    <div class="footer12" >
+      <!--关于我们-->
       <div class="footer1211">
         <div class="footer11font">
           <ul>
             <li class="lititle"><span class="guanywm">关于我们</span></a></li>
-            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360035121071-%E5%85%B3%E4%BA%8E%E4%B8%AD%E7%A7%8B%E4%BA%A4%E6%98%93%E6%89%80
-">关于二零二零</a></li>
-            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/sections/360007044431-公告中心">公告</a></li>
+            <!--            关于2020-->
+            <li class="liinfo"><a href="https://www.2020.exchange/index/notice/noticeDetail?columnId=0&id=100638">关于2020</a></li>
+
+            <!--用户协议-->
+            <li class="liinfo">
+              <!--              <router-link to="/index/notice?columnId=4&id=36" @click.native="goToNoticeCenter('4')" >{{$t("terms.Terms_conditionss_3")}}</router-link>-->
+              <a href="https://www.2020.exchange/index/notice/noticeDetail?columnId=4&id=100626">用户协议</a>
+            </li>
+
+            <!--隐私条款-->
+            <li class="liinfo">
+              <a href="https://www.2020.exchange/index/notice/noticeDetail?columnId=4&id=100627">隐私条款</a>
+
+              <!--              <router-link to="/index/notice?columnId=4" @click.native="goToNoticeCenter('4')" >{{$t("terms.Terms_conditionss_4")}}</router-link>-->
+            </li>
+
+            <!--            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/categories/360002253311"></a></li>-->
+            <!--            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/categories/360002253311">{{$t("terms.Terms_conditionss_4")}}</a></li>-->
           </ul>
         </div>
       </div>
+      <!--帮助-->
       <div class="footer1211">
         <div class="footer11font">
           <ul>
-            <li  class="lititle"><span class="guanywm">条款说明</span></li>
-            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360034747112-TERMS-AND-CONDITIONS">服务协议</a></li>
-            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360035121691-PRIVACY-POLICY">隐私协议</a></li>
-            <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360034747272-%E8%B4%B9%E7%8E%87%E6%A0%87%E5%87%86
-">费率标准</a></li>
+            <li  class="lititle"><span class="guanywm">帮助</span></li>
+            <!--常见问题-->
+            <li class="liinfo">
+<!--              <router-link to="/index/notice?columnId=3" @click.native="goToNoticeCenter('3')" >常见问题</router-link>-->
+              <a href="https://www.2020.exchange/index/notice?columnId=3" >常见问题</a>
+            </li>
+            <!--帮助中心-->
+            <li class="liinfo">
+<!--              <router-link to="/index/notice?columnId=1" @click.native="goToNoticeCenter('1')" >帮助中心</router-link>-->
+              <a href="https://www.2020.exchange/index/notice?columnId=1">帮助中心</a>
+            </li>
+            <!--新手指南-->
+            <li class="liinfo">
+<!--              <router-link to="/index/notice?columnId=2" @click.native="goToNoticeCenter('2')" >新手指南</router-link>-->
+              <a href="https://www.2020.exchange/index/notice?columnId=2">新手指南</a>
+            </li>
           </ul>
         </div>
-        </div>
-      <div class="footer1211">
-      <div class="footer11font wechat">
-        <img src="./assets/客服二维码_web 2.png" alt="">
-        <p>客服微信</p>
       </div>
+      <!--      服务-->
+      <div class="footer1211">
+        <div class="footer11font">
+          <ul>
+            <li  class="lititle"><span class="guanywm">服务</span></li>
+            <!--            费率标准-->
+            <li class="liinfo"><a href="https://www.2020.exchange/index/notice/noticeDetail?columnId=3&id=100631">费率标准</a></li>
+            <li class="liinfo">
+              <!--              <a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360035121691-PRIVACY-POLICY">{{$t("terms.Terms_conditionss_11")}}</a>-->
+<!--              <router-link to="/index/notice?columnId=0" @click.native="goToNoticeCenter('0')">公告中心</router-link>-->
+              <a href="https://www.2020.exchange/index/notice?columnId=0">公告中心</a>
+            </li>
+            <!--        <li class="liinfo"><a href="https://customerservice8872.zendesk.com/hc/zh-cn/articles/360034747272-%E8%B4%B9%E7%8E%87%E6%A0%87%E5%87%86">{{$t("terms.Terms_conditionss_7")}}</a></li>-->
+          </ul>
         </div>
       </div>
 
+      <div class="footer12-wechat">
+        <div class="footer11font">
+          <img src="../../assets/c2c_footer/kefuapp.jpg" alt="">
+          <p>客服微信</p>
+        </div>
+      </div>
+
+
+
+    </div>
 
 <!--      <div class="footer1211">-->
 <!--        <div class="footer11font">-->
