--- a/src/components/Transaction/Transaction.css
+++ b/src/components/Transaction/Transaction.css
@@ -1,16 +1,23 @@
 .Transaction {
-  margin: 0 auto;
+  width: 100%;
+  /*margin: 0 auto;*/
   margin-bottom: 20px;
   position: relative;
 }
-
+.Transactions {
+  margin: 0 auto;
+}
 .transaction-header {
-  height: 56px;
+  height: 70px;
   position: relative;
+  color: #F5F6FA;
+  background-color: #0D0E23;
 }
 
 .transaction-header-left {
-  margin-top: 150px;
+  /*margin-top: 150px;*/
+  width: 1200px;
+  margin: 0 auto;
 }
 
 
@@ -20,7 +27,8 @@
   justify-content: flex-start;
   font-size: 14px;
   font-weight: bold;
-  color: #000;
+  color: #F5F6FA;
+  /*background-color: #0D0E23;*/
 }
 
 .transaction-header-left-title-bar {
@@ -30,11 +38,13 @@
 }
 
 .transaction-header-left-buy .selected .transaction-header-left-title-bar {
-  background: #02987d;
+  color: #39B496;
+  background: #39B496;
 }
 
 .transaction-header-left-sell .selected .transaction-header-left-title-bar {
-  background: #E54146;
+  color: #EF5656;
+  background: #EF5656;
 }
 
 .transaction-header-left-title-text {
@@ -44,17 +54,17 @@
 }
 
 .transaction-header-left-list {
-  margin-top: 10px;
+  margin-top: 28px;
 }
 
 .transaction-header-left-item {
-  height: 24px;
-  line-height: 24px;
+  height: 40px;
+  line-height: 40px;
   position: relative;
   display: block;
   font-family: PingFangSC-Semibold;
   font-size: 20px;
-  color: #172A4D;
+  color: #F5F6FA;
   letter-spacing: 0;
 }
 
@@ -67,20 +77,20 @@
 }
 
 .transaction-header-left-buy .transaction-header-left-item.selected {
-  color: #02987d;
+  color: #39B496;
 }
 
 .transaction-header-left-buy .transaction-header-left-item.selected .transaction-header-left-item-bottom{
   position: absolute;
-  height: 2px;
+  height: 4px;
   left: -2px;
   right: -2px;
   bottom: -7px;
-  background: #02987d;
+  background: #39B496;
 }
 
 .transaction-header-left-sell .transaction-header-left-item.selected {
-  color: #E54146;
+  color: #EF5656;
 }
 .transaction-header-right {
   margin-top: 150px;
@@ -88,22 +98,25 @@
 
 .transaction-header-left-sell .transaction-header-left-item.selected .transaction-header-left-item-bottom{
   position: absolute;
-  height: 2px;
+  height: 4px;
   left: -2px;
   right: -2px;
   bottom: -7px;
-  background: #E54146;
+  background: #EF5656;
 }
 
 .transaction-header-left-cutter {
   height: 56px;
   width: 1px;
-  margin: 0 40px;
+  margin: 0 30px;
 }
 
 .transaction-header-right-img-box {
-  width: 30px;
-  height: 30px;
+  width: 79%;
+  /*display: inline-block;*/
+  text-align: right;
+  margin-top: 45px;
+  height: 35px;
 
 }
 
@@ -115,11 +128,19 @@
 }
 
 .transaction-header-right-currency{
-  margin-left: 20px;
-  font-family: PingFangSC-Semibold;
+  display: inline-block;
+  margin-left: 40px;
+  /*font-family:PingFangSC-Semibold,PingFang SC;*/
+  /*font-weight:600;*/
   font-size: 14px;
-  color: #172A4D;
+  color: #F5F6FA;
   letter-spacing: 0;
+  cursor: pointer;
+}
+.transactionicon {
+  vertical-align:middle;
+  width: 14px;
+  margin-bottom: 3px;
 }
 
 .transaction-header-right-amount-box {
@@ -128,14 +149,14 @@
 
 .transaction-header-right-amount-title {
   opacity: 0.6;
-  font-family: PingFangSC-Regular;
+  font-family:PingFangSC-Semibold,PingFang SC;
   font-size: 14px;
   color: #333333;
   letter-spacing: 0;
 }
 
 .transaction-header-right-amount-num {
-  font-family: PingFangSC-Semibold;
+  font-family:PingFangSC-Semibold,PingFang SC;
   font-size: 14px;
   color: #172A4D;
   letter-spacing: 0;
@@ -144,14 +165,14 @@
 
 .transaction-header-right-amount-unit {
   opacity: 0.6;
-  font-family: PingFangSC-Regular;
+  font-family:PingFangSC-Semibold,PingFang SC;
   font-size: 12px;
   color: #333333;
   letter-spacing: 0;
 }
 
 .transaction-header-right-btn {
-  background: #C43E4E;
+  background: #EF5656;
   border-radius: 3px;
   width: 60px;
   height: 28px;
@@ -159,14 +180,14 @@
   text-align: center;
   margin-left: 20px;
   cursor: pointer;
-  font-family: PingFangSC-Medium;
+  font-family:PingFangSC-Semibold,PingFang SC;
   font-size: 14px;
   color: #FFFFFF;
   letter-spacing: 0;
 }
 
 .router-view-box {
-  margin-top: 150px;
+  margin-top: 36px;
 }
 
 .transaction-info {
@@ -194,7 +215,7 @@
 }
 
 .transaction-info-title-text {
-  font-family: PingFangSC-Semibold;
+  font-family:PingFangSC-Semibold,PingFang SC;
   font-size: 20px;
   color: #333333;
   letter-spacing: 0;
@@ -203,7 +224,7 @@
 .transaction-info-container {
   margin-top: 15px;
   /*opacity: 0.5;*/
-  font-family: PingFangSC-Regular;
+  font-family:PingFangSC-Semibold,PingFang SC;
   font-size: 16px;
   color: #8994A5;
   letter-spacing: 0;
@@ -215,7 +236,7 @@
   /* text-align: center; */
   letter-spacing: 0px;
   /* opacity: 0.7; */
-  font-family: PingFangSC-Medium;
+  font-family:PingFangSC-Semibold,PingFang SC;
   font-size: 16px;
   color: #000000;
   text-align: center;
