OTC 法币交易 购买样式修改

--- a/src/components/TransactionBuy/TransactionElment.css
+++ b/src/components/TransactionBuy/TransactionElment.css
@@ -12,7 +12,7 @@
 .el-select-dropdown__item.selected {
     font-family: PingFangSC-Regular !important;
     font-size: 13px !important;
-    color: #C43E4E !important;
+    color: #3576F5 !important;
     letter-spacing: 0 !important;
 }
 
