OTC 法币交易 出售样式修改

--- a/src/components/TransactionSell/TransactionSell.css
+++ b/src/components/TransactionSell/TransactionSell.css
@@ -104,7 +104,7 @@
   height:42px;
   float: right;
   position: absolute;
-  background: #D14B64;
+  background: #EF5656;
   border-radius: 3px;
   right: 0;
   margin-top: 32px;
