--- a/src/components/BusinessOrderComplete/BusinessOrderComplete.css
+++ b/src/components/BusinessOrderComplete/BusinessOrderComplete.css
@@ -112,7 +112,7 @@
 	box-shadow: 0px 2px 5px #a4e2b4;
 }
 .btn_sell{
-	background: #E54146;
+	background: #EF5656;
 	-webkit-box-shadow: 0px 2px 5px #eca1a4;
 	box-shadow: 0px 2px 5px #eca1a4;
 }
