--- a/src/components/OrderCancel/OrderCancel.css
+++ b/src/components/OrderCancel/OrderCancel.css
@@ -19,7 +19,7 @@
   /*opacity: 0.4;*/
   font-family: PingFangSC-Regular;
   font-size: 14px;
-  color: #8994a5;
+  color: #6B7DA2;
   letter-spacing: 0;
 }
 .order_conduct_content > div{
