--- a/src/components/OrderConduct/OrderConduct.css
+++ b/src/components/OrderConduct/OrderConduct.css
@@ -35,7 +35,7 @@
   /*opacity: 0.4;*/
   font-family: PingFangSC-Regular;
   font-size: 14px;
-  color: #8994A5;
+  color: #6B7DA2;
   letter-spacing: 0;
 }
 .order_conduct_content > div{
