--- a/src/components/OrderDetails/OrderDetails.css
+++ b/src/components/OrderDetails/OrderDetails.css
@@ -101,7 +101,7 @@
 	padding-left: 72%;
   font-family: PingFangSC-Regular;
   font-size: 13px !important;
-  color: #8994A5;
+  color: #6B7DA2;
 }
 /*.type{*/
 /*	width: 15%;*/
@@ -699,7 +699,7 @@
   }
 }
 .iten_color1{
-  color: #8994A5;
+  color: #6B7DA2;
 }
 .iten_color2{
   font-size: 18px;
@@ -716,7 +716,7 @@
   /*background-color: #0babb6;*/
   font-family: PingFangSC-Medium;
   font-size: 13px;
-  color: #8994A5;
+  color: #6B7DA2;
   line-height: 20px;
   margin-top: 20px;
 }
@@ -794,6 +794,6 @@
 }
 
 .color_4A5{
-  color: #8994A5;
+  color: #6B7DA2;
 }
 
