--- a/src/components/Transaction/Transaction.html
+++ b/src/components/Transaction/Transaction.html
@@ -80,7 +80,7 @@
     <div class="transaction-info">
     <div class="transaction-info-title flex-between">
       <div class="transaction-info-title-left flex">
-        <div class="transaction-info-title-text flex-center flex-between strong text_dark">
+        <div class="transaction-info-title-text flex-center flex-between text_dark">
           交易声明
         </div>
       </div>
