--- a/src/components/TransactionBuy/TransactionBuy.html
+++ b/src/components/TransactionBuy/TransactionBuy.html
@@ -101,7 +101,7 @@
 <!--  </div>-->
 
 
- <div class="shichanggd">自由买币</div>
+ <div class="shichanggd">市场挂单</div>
   <div class="business_order">
     <div class="business_order_table">
       <!-- table 头 start -->
@@ -109,7 +109,7 @@
         <div class="ordertitle">商家</div>
         <div class="type" >成交单数</div>
         <div class="price">成交率</div>
-        <div class="unit">价格(CNY)</div>
+        <div class="unit">单价(CNY)</div>
         <div class="amount">数量(USDT)</div>
 <!--        <div class="money">金额(CNY)</div>-->
         <div class="num">限额(CNY)</div>
