--- a/src/components/BusinessOrderCannel/BusinessOrderCannel.css
+++ b/src/components/BusinessOrderCannel/BusinessOrderCannel.css
@@ -135,7 +135,7 @@
 }
 
 .btn_sell {
-  background: #E54146;
+  background: #EF5656;
   -webkit-box-shadow: 0px 2px 4px #fda29c;
   box-shadow: 0px 2px 4px #fda29c;
 }
