--- a/src/components/MerchantsProtocol/MerchantsProtocol.css
+++ b/src/components/MerchantsProtocol/MerchantsProtocol.css
@@ -19,27 +19,27 @@
     /* margin-top: 20px; */
     margin-bottom: 10px;
     /* width: 1200px; */
-  
+
   }
-  
+
   .apply-box-title{
     text-align: center;
     font-size: 20px;
     line-height: 80px;
     color: #050f1a;
   }
-  
+
   .apply-box-list{
     padding: 0 40px 40px;
   }
-  
+
   .apply-box-list-title{
     height: 30px;
     line-height: 30px;
     margin-top: 16px;
     margin-bottom: 16px;
   }
-  
+
   .apply-box-list-title-green-bar{
     display: inline-block;
     width: 4px;
@@ -49,12 +49,12 @@
     vertical-align: top;
     margin-right: 6px;
   }
-  
+
   .apply-box-list-title-green-title{
     font-size: 18px;
     height: 30px;
   }
-  
+
   .apply-box-list-descript{
     color: #4c4c4c;
     min-height: 24px;
@@ -63,29 +63,29 @@
     padding-left: 12px;
     margin-top: 10px;
   }
-  
+
   .apply-box-list-descript-list{
     padding-left: 18px;
     margin-top: 10px;
     margin-bottom: 10px;
   }
-  
+
   .apply-box-list-descript-list-title{
     min-height: 32px;
     line-height: 32px;
     font-size: 16px;
   }
-  
+
   .apply-box-list-descript-detail{
     padding-left: 2em;
   }
-  
+
   .apply-box-list-descript-item{
     min-height: 26px;
     line-height: 26px;
     font-size: 14px;
   }
-  
+
   .apply-box-list-descript-item-icon{
     display: inline-block;
     width: 6px;
@@ -96,46 +96,46 @@
     vertical-align: top;
     margin-right: 8px;
   }
-  
+
   .apply-font-red{
-    color: #E54146;
+    color: #EF5656;
   }
-  
+
   .apply-font-weight{
     font-weight: bold;
   }
-  
+
   .apply-font-blue{
     color: #C43E4E;
   }
-  
-  
+
+
   /*----------------------------------------------------------------------------------------------------*/
-  
+
   @media screen and (max-width: 768px) {
     .apply-box-list{
       padding: 0 10px 20px;
     }
-  
+
     .apply-box{
       margin-top: 0;
       margin-bottom: 0;
       background: #000;
       color: #fff;
     }
-  
+
     .border_radius {
       border-radius: 0!important;
     }
-  
-  
+
+
     .apply-box-title{
       text-align: center;
       font-size: 20px;
       line-height: 60px;
       color: #fff;
     }
-  
+
     .apply-box-list-descript{
       color: rgba(255,255,255,0.8);
       min-height: 24px;
@@ -145,7 +145,7 @@
       margin-top: 10px;
       text-align: justify;
     }
-  
+
     .apply-box-list-descript:first-child{
       margin-top: 0;
     }
