--- a/src/components/PaymentSet/PaymentSe.css
+++ b/src/components/PaymentSet/PaymentSe.css
@@ -352,7 +352,7 @@
   width: 210px;
   text-align: right;
   font-size: 14px;
-  color: #8994A5;
+  color: #6B7DA2;
   padding-right: 20px;
   white-space: nowrap;
 }
@@ -512,22 +512,22 @@
 /*  弹窗按钮 end*/
 
 .input-item-input::-webkit-input-placeholder {
-  color: #8994A5;
+  color: #6B7DA2;
   font-weight: normal;
 }
 
 .input-item-input::-moz-placeholder { /* Mozilla Firefox 19+ */
-  color: #8994A5;
+  color: #6B7DA2;
   font-weight: normal;
 }
 
 .input-item-input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-  color: #8994A5;
+  color: #6B7DA2;
   font-weight: normal;
 }
 
 .input-item-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: #8994A5;
+  color: #6B7DA2;
   font-weight: normal;
 }
 
