--- a/src/components/Transaction/Transaction.css
+++ b/src/components/Transaction/Transaction.css
@@ -130,8 +130,8 @@
 .transaction-header-right-currency{
   display: inline-block;
   margin-left: 40px;
-  /*font-family:PingFangSC-Semibold,PingFang SC;*/
-  /*font-weight:600;*/
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:600;
   font-size: 14px;
   color: #F5F6FA;
   letter-spacing: 0;
@@ -149,14 +149,14 @@
 
 .transaction-header-right-amount-title {
   opacity: 0.6;
-  font-family:PingFangSC-Semibold,PingFang SC;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 14px;
   color: #333333;
   letter-spacing: 0;
 }
 
 .transaction-header-right-amount-num {
-  font-family:PingFangSC-Semibold,PingFang SC;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 14px;
   color: #172A4D;
   letter-spacing: 0;
@@ -165,7 +165,7 @@
 
 .transaction-header-right-amount-unit {
   opacity: 0.6;
-  font-family:PingFangSC-Semibold,PingFang SC;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 12px;
   color: #333333;
   letter-spacing: 0;
@@ -180,7 +180,7 @@
   text-align: center;
   margin-left: 20px;
   cursor: pointer;
-  font-family:PingFangSC-Semibold,PingFang SC;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 14px;
   color: #FFFFFF;
   letter-spacing: 0;
@@ -215,18 +215,18 @@
 }
 
 .transaction-info-title-text {
-  font-family:PingFangSC-Semibold,PingFang SC;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:600;
   font-size: 20px;
-  color: #333333;
   letter-spacing: 0;
 }
 
 .transaction-info-container {
   margin-top: 15px;
   /*opacity: 0.5;*/
-  font-family:PingFangSC-Semibold,PingFang SC;
-  font-size: 16px;
-  color: #8994A5;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-size: 14px;
+  color: #6B7DA2;
   letter-spacing: 0;
   line-height: 30px;
 }
@@ -236,7 +236,7 @@
   /* text-align: center; */
   letter-spacing: 0px;
   /* opacity: 0.7; */
-  font-family:PingFangSC-Semibold,PingFang SC;
+  font-family:PingFangSC-Regular,PingFang SC;
   font-size: 16px;
   color: #000000;
   text-align: center;
