--- a/src/components/TransactionSell/TransactionSell.html
+++ b/src/components/TransactionSell/TransactionSell.html
@@ -87,7 +87,7 @@
     </div> -->
   </div>
 
- <div class="shichanggd">自由卖币</div>
+ <div class="shichanggd">市场挂单</div>
   <div class="business_order">
     <div class="business_order_table">
       <!-- table 头 start -->
@@ -227,13 +227,13 @@
                   支付宝
                 </div>
                 <div v-if="sellItem.payMethod === 'BANKCARD' || sellItem.payMethod === 'ALIPAY|BANKCARD' || sellItem.payMethod === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
-                  银行转账 <span style="color:#E54146">(需本人账户收款)</span>
+                  银行转账 <span style="color:#EF5656">(需本人账户收款)</span>
                 </div>
                 <div v-if="sellItem.payType === 'ALIPAY' || sellItem.payType === 'ALIPAY|BANKCARD' || sellItem.payType === 'BANKCARD|ALIPAY'"  class="buy-toast-item-first-content-bank-item text_dark strong">
                   支付宝
                 </div>
                 <div v-if="sellItem.payType === 'BANKCARD' || sellItem.payType === 'ALIPAY|BANKCARD' || sellItem.payType === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
-                  银行转账 <span style="color:#E54146">(需本人账户收款)</span>
+                  银行转账 <span style="color:#EF5656">(需本人账户收款)</span>
                 </div>
               </div>
               <!-- <div class="sell-toast-item-pay-mode-info text_blue">(需本人账户收款)</div> -->
@@ -289,7 +289,7 @@
                   支付宝
                 </div>
                 <div class="sell-toast-item-first-content-bank-item text_dark strong">
-                  银行转账  <span style="color:#E54146">(需本人账户收款)</span>
+                  银行转账  <span style="color:#EF5656">(需本人账户收款)</span>
                 </div>
               </div>
               <div class="sell-toast-item-pay-mode-info text_blue">(需本人账户收款)</div>
@@ -300,13 +300,13 @@
                 支付宝
               </div>
           <div v-if="sellItem.payMethod === 'BANKCARD' || sellItem.payMethod === 'ALIPAY|BANKCARD' || sellItem.payMethod === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
-                银行转账 <span style="color:#E54146">(需本人账户收款)</span>
+                银行转账 <span style="color:#EF5656">(需本人账户收款)</span>
               </div>
               <div v-if="sellItem.payType === 'ALIPAY' || sellItem.payType === 'ALIPAY|BANKCARD' || sellItem.payType === 'BANKCARD|ALIPAY'"  class="buy-toast-item-first-content-bank-item text_dark strong">
                 支付宝
               </div>
               <div v-if="sellItem.payType === 'BANKCARD' || sellItem.payType === 'ALIPAY|BANKCARD' || sellItem.payType === 'BANKCARD|ALIPAY'" class="buy-toast-item-first-content-bank-item text_dark strong">
-                银行转账 <span style="color:#E54146">(需本人账户收款)</span>
+                银行转账 <span style="color:#EF5656">(需本人账户收款)</span>
               </div>
           </div>
               <!-- <div class="sell-toast-item-pay-mode-info text_blue">(需本人账户收款)</div> -->
