--- a/src/components/BusinessOrderComplete/BusinessOrderComplete.css
+++ b/src/components/BusinessOrderComplete/BusinessOrderComplete.css
@@ -107,7 +107,7 @@
 	cursor: pointer;
 }
 .btn_buy{
-	background: #02987d;
+	background: #39B496;
 	-webkit-box-shadow: 0px 2px 5px #a4e2b4;
 	box-shadow: 0px 2px 5px #a4e2b4;
 }
