--- a/src/components/OrderCancel/OrderCancel.css
+++ b/src/components/OrderCancel/OrderCancel.css
@@ -50,7 +50,7 @@
   display: inline;
 }
 .order_conduct_content > div.buy{
-  color: #02987D;
+  color: #39B496;
 }
 .order_conduct_content > div.sell{
   color: #C43E4E;
