--- a/src/components/OrderConduct/OrderConduct.css
+++ b/src/components/OrderConduct/OrderConduct.css
@@ -63,14 +63,14 @@
 }
 .order_conduct_content > div>.buy{
   display: inline;
-  color: #02987d;
+  color: #39B496;
 }
 .order_conduct_content > div>.sell{
   color: #c43e4e;
   display: inline;
 }
 .order_conduct_content .buy{
-  color: #02987d;
+  color: #39B496;
 }
 .order_conduct_content .sell{
   color: #c43e4e;
