--- a/src/components/OrderOther/OrderOther.css
+++ b/src/components/OrderOther/OrderOther.css
@@ -51,7 +51,7 @@
 }
 .order_conduct_content > div.buy{
   /* display: inline; */
-  color: #02987D;
+  color: #39B496;
 }
 .order_conduct_content > div.sell{
   color: #C43E4E;
