--- a/src/components/TransactionSell/TransactionSell.css
+++ b/src/components/TransactionSell/TransactionSell.css
@@ -392,7 +392,7 @@
   border: 1px solid #E7EBEE;
 }
 .btn_sell{
-  background: #02987d;
+  background: #39B496;
 }
 .btn_sell{
   background: #C43E4E;
