--- a/src/components/BusinessCenter/BusinessCenter.css
+++ b/src/components/BusinessCenter/BusinessCenter.css
@@ -196,7 +196,7 @@
 }
 
 .business-header-buy .business-header-item-input:focus {
-  border: 1px solid #02987d!important;
+  border: 1px solid #39B496!important;
 }
 
 .business-header-select-box {
@@ -236,8 +236,8 @@
   line-height: 16px;
 }
 .btn_buy{
-  background: #02987d;
-  border: 1px solid #02987d;
+  background: #39B496;
+  border: 1px solid #39B496;
 }
 .btn_sell{
   background: #EF5656;
@@ -459,7 +459,7 @@
 }
 
 .input_border.buy_border{
-  border-color: #02987d !important;
+  border-color: #39B496 !important;
 }
 .input_border.sell_border{
   border-color: #EF5656 !important;
@@ -570,12 +570,12 @@
 }
 
 .submit-btn-cancel {
-  border: 1px solid #02987d;
+  border: 1px solid #39B496;
 }
 
 .submit-btn-confirm {
-  border: 1px solid #02987d;
-  background: #02987d;
+  border: 1px solid #39B496;
+  background: #39B496;
 }
 
 .submit-sell-cancel {
