--- a/src/components/BusinessOrderCannel/BusinessOrderCannel.css
+++ b/src/components/BusinessOrderCannel/BusinessOrderCannel.css
@@ -129,7 +129,7 @@
 }
 
 .btn_buy {
-  background: #02987d;
+  background: #39B496;
   -webkit-box-shadow: 0px 2px 4px #9fbe97;
   box-shadow: 0px 2px 4px #9fbe97;
 }
