--- a/src/components/TransactionSell/TransactionSell.css
+++ b/src/components/TransactionSell/TransactionSell.css
@@ -61,7 +61,7 @@
 .usdtpriceaaa3{
   font-family: PingFangSC-Regular;
   font-size: 14px;
-  color: #9FA7B8;
+  color: #6B7DA2;
   letter-spacing: 0;
   margin-left: 20px;
 }
@@ -129,7 +129,7 @@
 .usdtprice .buytt{
   font-family: PingFangSC-Regular;
   font-size: 14px;
-  color: #9FA7B8;
+  color: #6B7DA2;
   letter-spacing: 0;
   margin-bottom: 12px;
 }
@@ -151,7 +151,7 @@
 .buywrite01 .inputbuyje::-webkit-input-placeholder{
   font-family: PingFangSC-Regular;
   font-size: 16px;
-  color: #9FA7B8;
+  color: #6B7DA2;
   line-height: 16px;
 }
 .buywrite02{
