--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -4,7 +4,7 @@
 .order_container {
   width: 1200px;
   margin: 0 auto;
-  padding-top: 100px;
+  /*padding-top: 100px;*/
 }
 .order_title {
   line-height: 40px;
@@ -12,15 +12,16 @@
   color: #333333;
 }
 .order_conduct {
-  margin-top: 35px;
+  /*margin-top: 35px;*/
 }
 .order_conduct_tabs {
   /*position: relative;*/
+  border-bottom: 1px solid #EFF0FF;
 }
 .order_conduct_tab {
   /* width: px; */
-  height: 40px;
-  line-height: 40px;
+  height: 74px;
+  line-height: 74px;
   text-align: left;
   /* background: #fafafa; */
   cursor: pointer;
@@ -28,19 +29,25 @@
   /* box-shadow: 0 7px 20px 3px rgba(118, 125, 127, 0.08); */
   /*z-index: 100;*/
   /*opacity: 0.7;*/
-  font-family: PingFangSC-Semibold;
-  font-size: 16px;
-  color: #172A4D;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+  font-size: 14px;
+  color: #6B7DA2;
   letter-spacing: 0;
-  margin-right: 60px;
-  margin-bottom: 60px;
+  margin-right: 50px;
+  /*margin-bottom: 60px;*/
+}
+.fsize {
+  font-weight:500;
+  color: #0D0E23;
+  font-size: 22px;
 }
 .order_conduct_tab_active {
   background-color: #fff;
   /*z-index: 200;*/
-  font-weight: bold;
-  color: #C43E4E;
-  border-bottom: 2px solid  #C43E4E;
+  /*font-weight: bold;*/
+  color: #3576F5;
+  border-bottom: 2px solid  #3576F5;
 }
 .tab-item-first {
   border-top-left-radius: 6px;
